--- a/aula014ex/ex017/css/style.css
+++ b/aula014ex/ex017/css/style.css
@@ -8,14 +8,14 @@ body {
 section {
     background-color: white;
     border-radius: 12px;
-    padding: 16px;
+    padding: 24px;
     width: 500px;
     margin: auto;
     box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.226);
     text-align: left;
 }
 
-#tabu {
+#table {
     font: 400 0.7em Arial;
 }
 
